# nc_latent_tod

./: .gitignore  LICENSE  README.md  folder_runner.sh  setup.cfg
.github/workflows/: build_tests.yml  docker_build.yml
k8s/: Dockerfile  debug.yml  hf-cache-pvc.yml  hf_e2e_job.yml  hf_label_job.yml
notes/error_analysis/: README.md
runs/: README.md
runs/offline_labelling_experiment/initial_labelling/: README.md  generate_runs.py  job_0.json
runs/offline_labelling_experiment/second_labelling/: README.md  generate_runs.py  job_0.json
runs/online_e2e_experiment/test_set/: README.md  step-2-final.json
src/nc_latent_tod/: data_types.py  resources.py  run_build_unit_tests.py
src/nc_latent_tod/acts/: act.py  act_definitions.py  utils.py
src/nc_latent_tod/clients/: abstract_hf_lm_client.py  abstract_lm_client.py  codex_client.py  starcoder_client.py
src/nc_latent_tod/data/: utils.py
src/nc_latent_tod/db/: abstract_db.py  multiwoz_db.py  test_multiwoz_db.py  types.py
src/nc_latent_tod/delex/: abstract_delexer.py  fuzzy_regex_delexer.py
src/nc_latent_tod/evaluation/: dialogue_act.py  dst.py
src/nc_latent_tod/experiments/: abstract_experiment.py  batch_client_lm_module.py  config.py  data_types.py  dataset_uploads.py  dynamo_manifest.py  enqueue_job.py  manifest.py  mock_simple_module.py  offline_labelling_experiment.py  online_e2e_experiment.py  poll_for_offline_label_jobs.py  upload_offline_labeled_dataset.py  utils.py
src/nc_latent_tod/kwargs_prompt/: agent_definition.py  parsing.py  prompt.py  simple_ft_prompt.py  templates.py  test_prompt.py  utils.py
(+384 files in other folders)
