[metadata]
name = nc_latent_tod
version = 0.0.1
author = Brendan King
author_email = bking2@ucsc.edu
url = https://github.com/jlab-nlp/nc_latent_tod.git
description = A python package containing methods for Unsupervised End-to-End Task-Oriented Dialogue with LLMs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = task-oriented dialogue, end-to-end, LLMs, unsupervised, noisy channel
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires=
    torch~=2.1.2
    datasets~=2.16.1
    wandb~=0.16.1
    num2words~=0.5.12
    bidict~=0.22.1
    openai~=0.27.8
    wordninja~=2.0.0
    fuzzywuzzy~=0.18.0
    fuzzysearch~=0.7.3
    dictdiffer~=0.9.0
    accelerate~=0.34.2
    bitsandbytes~=0.41.3.post2
    huggingface_hub
    faiss-cpu~=1.7.4
    faiss-gpu~=1.7
    scipy~=1.11.1
    gitpython~=3.1.37
    peft~=0.5.0
    dacite~=1.8.1
    easydict~=1.11
    pandas~=2.1
    Jinja2~=3.1
    transformers~=4.44.2
    jsonlines~=4.0.0
    elasticsearch~=8.12.0
    line-profiler~=4.1.2
    sacrebleu~=2.3.1
    elasticsearch~=8.12.0
    lexical-diversity~=0.1.1
    sacremoses~=0.0.53
    python-Levenshtein~=0.23.0
    boto3~=1.34.62

[options.extras_require]
dev=
    dictdiffer~=0.9.0

[options.package_data]
# If any package or subpackage contains *.txt or *.sql files, include them:
* = *.txt, *.sql, *.pair, *.json, *.py, *.md
[options.packages.find]
where=src